--- a/rentateam/src/scss/style.scss
+++ b/rentateam/src/scss/style.scss
@@ -1,3 +1,8 @@
 @import './variable';
 @import './fonts';
 @import './settings';
+
+// blocks
+@import './blocks/header';
+@import './blocks/main';
+@import './blocks/navigation';
