--- a/rentateam/src/scss/style.scss
+++ b/rentateam/src/scss/style.scss
@@ -6,3 +6,6 @@
 @import './blocks/header';
 @import './blocks/main';
 @import './blocks/navigation';
+@import './blocks/categoryes';
+@import './blocks/footer';
+@import './blocks/product';
