--- a/rentateam/src/scss/_media.scss
+++ b/rentateam/src/scss/_media.scss
@@ -126,6 +126,7 @@
 }
 
 @media (max-width: 760px) {
+
     .product {
         width: 44%;
         margin: 0 0 10px;
@@ -162,6 +163,11 @@
 
     }
 
+    .social {
+        &__link {
+            margin: 0 10px;
+        }
+    }
 
 }
 
@@ -198,7 +204,9 @@
     .navigation {
         padding: 10px 0;
 
+
         &__list {
+            display: none;
             position: absolute;
             top: 100%;
             left: 0;
@@ -208,14 +216,153 @@
             align-items: flex-start;
             padding: 0px 50px 15px;
 
+            &--open {
+                display: flex;
+            }
+
+        }
+    }
+
+    .footer {
+        padding-top: 100px;
+
+        &__logo {
+            img {
+                width: 120px;
+                height: 50px;
+            }
+
+        }
+
+        &__list {
+            flex-wrap: wrap;
+        }
+
+        &__share {
+            position: relative;
+            display: flex;
+            justify-content: center;
+            margin-top: 15px;
+        }
+    }
+
+    .footer-item {
+        width: 50%;
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        margin-bottom: 20px;
+
+        &--logo {
+            order: -1;
+            width: 100%;
+            margin-bottom: 30px;
+        }
+    }
+
+    .social {}
+}
+
+@media (max-width: 680px) {
+    .product {
+        width: 320px;
+    }
+
+    .category {
+        &__items {
+            justify-content: center;
+        }
+    }
+
+    .main {
+        &__title {
+            line-height: 30px;
+            font-size: 24px;
+        }
+    }
+
+    .form {
+        flex-direction: column;
+        align-items: flex-start;
+
+        &__item {
+            margin-bottom: 10px;
+            margin-right: 0;
+            width: 100%;
+        }
+
+        &__label {
+            width: 80px;
+            font-size: 18px;
+            line-height: 26px;
+        }
+
+        &__input {
+            padding: 6px 10px;
+            flex-grow: 1;
+            font-size: 14px;
         }
     }
 }
 
-@media (max-width: 680px) {}
+@media (max-width: 575px) {
+    .container {
+        padding: 0 20px;
+    }
 
-@media (max-width: 575px) {}
+    .main {
+        margin-top: 30px;
 
-@media (max-width: 480px) {}
+        &__head {
+            flex-direction: column;
+        }
+
+        &__title {
+            margin-bottom: 15px;
+        }
+    }
+
+    .navigation {
+        margin-top: 10px;
+    }
+
+    .category {
+        &__title {
+            font-size: 20px;
+            line-height: 28px;
+        }
+    }
+}
+
+@media (max-width: 480px) {
+    .product {
+        width: 90%;
+    }
+
+    .footer-item {
+        width: 100%;
+
+        &__title {
+            font-size: 20px;
+            line-height: 26px;
+        }
+
+        &__link {
+            font-size: 12px;
+            line-height: 15px;
+        }
+
+        &__logo{
+            width: 130px;
+            height: 130px;
+        }
+    }
+
+    .footer {
+        &__bottom {
+            margin-top: 20px;
+        }
+    }
+}
 
 @media (max-width: 320px) {}
