--- a/rentateam/src/scss/blocks/_main.scss
+++ b/rentateam/src/scss/blocks/_main.scss
@@ -57,10 +57,14 @@
         display: flex;
         align-items: center;
         margin-right: 43px;
+        position: relative;
 
-        &:last-child{
+        &:last-child {
             margin-right: 0;
         }
+
+        
+       
     }
 
     &__label {
@@ -85,5 +89,40 @@
         border-radius: 4px;
         border: none;
         outline: none;
+
+
+    }
+
+}
+
+
+.req{
+    background: #000000;
+    border-radius: 8px;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 18px;
+    line-height: 22px;
+    text-align: center;
+    color: #FFFFFF;
+    font-family: sans-serif;
+    position: absolute;
+    top: 140%;
+    left: 0;
+    padding: 12px 20px;
+    width: 463px;
+    z-index: 10;
+
+    &:before{
+        content: '';
+        position: absolute;
+        width: 15px;
+        height: 15px;
+        background: #000000;
+        z-index: 5;
+        top: -10%;
+        transform: rotate(45deg);
+        left: 35%;
+
     }
 }
